--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "1.0.1",
+    "antd": "^4.8.4",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "2.2.6",
     "css": "^3.0.0",
+    "firebase": "^8.0.2",
     "less": "^3.12.2",
     "moment": "2.25.3",
     "next": "9.3.6",
