--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "1.0.1",
