--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-preset-es2015": "^6.24.1",
     "classnames": "2.2.6",
     "css": "^3.0.0",
+    "date-fns": "^2.16.1",
     "firebase": "^8.0.2",
     "less": "^3.12.2",
     "moment": "2.25.3",
