--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "css": "^3.0.0",
     "date-fns": "^2.16.1",
     "firebase": "^8.0.2",
+    "install": "^0.13.0",
     "less": "^3.12.2",
     "moment": "2.25.3",
     "next": "9.3.6",
@@ -62,6 +63,7 @@
     "react-dom": "16.13.1",
     "react-quill": "^1.3.5",
     "react-slick": "0.25.2",
+    "react-speech-recognition": "^3.5.0",
     "react-swipeable-views": "0.13.9",
     "styled-components": "5.1.0",
     "suneditor-react": "^2.14.6"
